updated the number of fault domains

--- a/Instructions/20533D_LAB_AK_04.md
+++ b/Instructions/20533D_LAB_AK_04.md
@@ -17,7 +17,7 @@
 
 6. Click **20533D0401-avset**.
 
-7. On the 20533D0401-avset blade, note that the availability set has 3 fault domains, 5 update domains, and it contains two virtual machines. Also note that each VM has a unique fault domain and update domain. 
+7. On the 20533D0401-avset blade, note that the availability set has 2 or 3 fault domains (depending on the Azure region), 5 update domains, and it contains two virtual machines. Also note that each VM has a unique fault domain and update domain. 
 
 8. Leave the Microsoft Edge window with the Azure portal open.
 
