updated the number of fault domains

--- a/Instructions/20533D_LAB_04.md
+++ b/Instructions/20533D_LAB_04.md
@@ -51,7 +51,7 @@ The main tasks for this exercise are as follows:
 
 5. On the 20533D0401-LabRG blade, review the list of resources. Note that includes an availability set named 20533D0401-avset. 
 
-6. Navigate to the **20533D0401-avset** blade and note that the availability set has 2 or 3 fault domains (depending on the Azure region), 5 update domains, and it contains two virtual machines. Also note that each VM has a unique fault domain and update domain. 
+6. Navigate to the **20533D0401-avset** blade and note that the availability set has 2 fault domains, 5 update domains, and it contains two virtual machines. Also note that each VM has a unique fault domain and update domain. 
 
 7. Leave the Microsoft Edge window with the Azure portal open.
 
