Update Lab o8 and LAK
PaaS cloud service changed to Azure Cloud Services to match book.

--- a/Instructions/20533D_LAB_08.md
+++ b/Instructions/20533D_LAB_08.md
@@ -1,20 +1,20 @@
-﻿# Module 8: Implementing PaaS cloud services
+﻿# Module 8: Implementing Azure Cloud Services
 # Lab: Implementing PaaS cloud services
   
 ### Scenario
   
- You want to evaluate the capabilities of PaaS cloud services to host A. Datum web applications. Your development team has provided a simple cloud service project that you can use to test Cloud Services functionality in Azure. You want to show how staging and production slots can be used to simplify the deployment of new versions of the cloud service. You also want to determine whether you can monitor the service to get clear information on resource usage.
+ You want to evaluate the capabilities of Azure Cloud Services to host A. Datum web applications. Your development team has provided a simple cloud service project that you can use to test its functionality in Azure. You want to show how staging and production slots can be used to simplify the deployment of new versions of the cloud service. You also want to determine whether you can monitor the service to get clear information on resource usage.
 
 
 ### Objectives
   
  At the end of this lab, you will be able to:
 
-- Configure and deploy a PaaS cloud service to Azure.
+- Configure and deploy a cloud service to Azure.
 
-- Deploy a PaaS cloud service for staging and enable Remote Desktop Protocol (RDP) access.
+- Deploy a cloud service for staging and enable Remote Desktop Protocol (RDP) access.
 
-- Configure metrics and alerts to monitor PaaS cloud service behavior.
+- Configure metrics and alerts to monitor the cloud service state.
 
 
 ### Lab Setup
@@ -28,25 +28,25 @@ User name: **Student**
 Password: **Pa55w.rd**
 
 
-## Exercise 1: Deploying a PaaS cloud service
+## Exercise 1: Deploying a cloud service
   
 ### Scenario
   
- You have been asked to test the deployment of the sample PaaS cloud service to Azure.
+ You have been asked to test the deployment of a sample cloud service to Azure.
 
  The main tasks for this exercise are as follows:
 
-1. Create an Azure SQL Server Database for a PaaS cloud service
+1. Create an Azure SQL Server Database for an Azure Cloud Service
 
-2. Create an Azure Storage account for a PaaS cloud service
+2. Create an Azure Storage account for an Azure Cloud Service
 
 3. Configure the service definition file
 
-4. Deploy an PaaS cloud service
+4. Deploy an Azure Cloud Service
 
 
 
-#### Task 1. Create an Azure SQL Server Database for a PaaS cloud service
+#### Task 1. Create an Azure SQL Server Database for an Azure Cloud Service
   
 1. Sign in to the MIA-CL1 lab virtual machine as **Student** with the password **Pa55w.rd**
 
@@ -87,7 +87,7 @@ Password: **Pa55w.rd**
 - Pin to dashboard: leave the checkbox clear
 
 
-#### Task 2. Create an Azure Storage account for a PaaS cloud service
+#### Task 2. Create an Azure Storage account for an Azure Cloud Service
 
 1. From the Azure portal, create a new storage account with the following settings: 
 
@@ -138,9 +138,9 @@ Password: **Pa55w.rd**
 
 
 
-#### Task 4: Deploy the PaaS cloud service
+#### Task 4: Deploy the Azure Cloud Service
   
-1. From the Azure portal, create a new PaaS cloud service with the following settings:
+1. From the Azure portal, create a new Azure Cloud Service with the following settings:
 
 - DNS name: any valid, unique name
 
@@ -167,11 +167,11 @@ Password: **Pa55w.rd**
   
 ### Scenario
   
- The development team has provided another version of the PaaS cloud service you deployed to Azure. You want to determine how you can use deployment slots to stage and deploy new versions of cloud services. You will use the same configuration you used for the production service. You also want to test Remote Desktop connectivity to individual instances of cloud service roles.
+ The development team has provided another version of the Azure Cloud Service you deployed to Azure. You want to determine how you can use deployment slots to stage and deploy new versions of cloud services. You will use the same configuration you used for the production service. You also want to test Remote Desktop connectivity to individual instances of cloud service roles.
 
 The main tasks for this exercise are as follows:
 
-1. Perform a staged deployment of a PaaS cloud service
+1. Perform a staged deployment of an Azure Cloud Service
 
 2. Configure RDP access
 
@@ -179,9 +179,9 @@ The main tasks for this exercise are as follows:
 
 
 
-#### Task 1: Perform a staged deployment of a PaaS cloud service
+#### Task 1: Perform a staged deployment of an Azure Cloud Service
   
-1. From the Azure portal, add a new staging deployment to the newly created PaaS cloud service by uploading package and configuration files.
+1. From the Azure portal, add a new staging deployment to the newly created Azure Cloud Service by uploading package and configuration files.
 
 2. Set the staging deployment name to **AdatumAdsStage**.
 
@@ -223,15 +223,15 @@ The main tasks for this exercise are as follows:
 
 #### Task 3: Test connectivity
   
-1. From the Azure portal, identify the URL of the production deployment of the PaaS cloud service you deployed in the previous exercise.
+1. From the Azure portal, identify the URL of the production deployment of the Azure Cloud Service you deployed in the previous exercise.
 
-2. Use Microsoft Edge to navigate to the URL representing the production deployment of the PaaS cloud service.
+2. Use Microsoft Edge to navigate to the URL representing the production deployment of the Azure Cloud Service.
 
 3. Leave the Microsoft Edge window open. You will use it later in this exercise.
 
-4. From the Azure portal, identify the URL of the staging deployment of the PaaS cloud service you deployed in the previous exercise.
+4. From the Azure portal, identify the URL of the staging deployment of the Azure Cloud Service you deployed in the previous exercise.
 
-5. Navigate to the URL representing the staging deployment of the PaaS cloud service by using Microsoft Edge.
+5. Navigate to the URL representing the staging deployment of the Azure Cloud Service by using Microsoft Edge.
 
 6. Close the Microsoft Edge tab showing the staging deployment.
 
@@ -240,18 +240,18 @@ The main tasks for this exercise are as follows:
 8. Close the remote desktop connection.
 
 
-> **Result**: At the end of this exercise you have performed a staging deployment of a PaaS cloud service, enable RDP access to a PaaS cloud service, and connected to cloud service instances via HTTP and via RDP.
+> **Result**: At the end of this exercise you have performed a staging deployment of an Azure Cloud Service, enable RDP access to an Azure Cloud Service, and connected to cloud service instances via HTTP and via RDP.
 
 
 ## Exercise 3: Monitoring cloud services
   
 ### Scenario
   
- You have been asked to evaluate the network traffic used by the new version of the PaaS cloud service that you deployed to the production environment. To accomplish this, you will start collecting network-related monitoring metrics and configure an alert.
+ You have been asked to evaluate the network traffic used by the new version of the Azure Cloud Service that you deployed to the production environment. To accomplish this, you will start collecting network-related monitoring metrics and configure an alert.
 
 The main tasks for this exercise are as follows:
 
-1. Add metrics to the PaaS cloud service monitoring 
+1. Add metrics to the Azure Cloud Service monitoring 
 
 2. Create an alert for a cloud service
 
@@ -260,7 +260,7 @@ The main tasks for this exercise are as follows:
 4. Remove the lab environment
 
 
-#### Task 1: Add metrics to the PaaS cloud service monitoring
+#### Task 1: Add metrics to the Azure Cloud Service monitoring
   
 1. In the Microsoft Edge window, in the Azure portal, navigate to the blade of the Production slot of the cloud service.
 
@@ -337,7 +337,7 @@ The main tasks for this exercise are as follows:
 
 9. Close all open windows.
 
-> **Result**: At the end of this exercise, you will have configured monitoring for a PaaS cloud service with a new metric and an alert.
+> **Result**: At the end of this exercise, you will have configured monitoring for an Azure Cloud Service with a new metric and an alert.
 
 
 
@@ -345,7 +345,7 @@ The main tasks for this exercise are as follows:
 In Exercise 2, you enabled RDP access and used the RDP client to connect to an instance of a web role. Why would administrators want to connect to cloud service role instances via RDP?
 
 **Question** 
-You want to ensure you can identify the volume of network traffic your PaaS cloud service has received over the last hour. Should you configure a monitoring metric or an alert?
+You want to ensure you can identify the volume of network traffic your Azure Cloud Service has received over the last hour. Should you configure a monitoring metric or an alert?
 
 
 ©2016 Microsoft Corporation. All rights reserved.
