--- a/Instructions/20533D_LAB_AK_08.md
+++ b/Instructions/20533D_LAB_AK_08.md
@@ -1,9 +1,9 @@
-﻿# Lab Answer Key:  Module 8: Implementing PaaS cloud services
-# Lab: Implementing PaaS cloud services
+﻿# Lab Answer Key:  Module 8: Implementing Azure Cloud Services
+# Lab: Implementing Azure Cloud Services
   
-## Exercise 1: Deploying a PaaS cloud service
+## Exercise 1: Deploying an Azure Cloud Service
   
-#### Task 1: Create an Azure SQL Server Database for a PaaS cloud service
+#### Task 1: Create an Azure SQL Server Database for an Azure Cloud Service
   
 1. Ensure that you are signed in to MIA-CL1 as **Student** with the password **Pa55w.rd**.
 
@@ -49,7 +49,7 @@
 
 
 
-#### Task 2: Create an Azure Storage account for a PaaS cloud service
+#### Task 2: Create an Azure Storage account for an Azure Cloud Service
   
 1. In the Azure portal, click **+ Create resource**. On the **New** blade, click **Storage** and then, on the **Storage** blade, click **Storage account - blob, file, table, queue**.
 
@@ -181,7 +181,7 @@
 
 
 
-#### Task 4: Deploy an PaaS cloud service
+#### Task 4: Deploy an Azure Cloud Service
   
 1. In the Azure portal, click **+ Create resource**. In the **Search the Marketplace** text box, type **Cloud service**, and, in the list of results, click **Cloud service**.
 
@@ -235,7 +235,7 @@
 
 ## Exercise 2: Configuring deployment slots and RDP
   
-#### Task 1: Perform a staged deployment of a PaaS cloud service
+#### Task 1: Perform a staged deployment of an Azure Cloud Service
   
 1. In the Azure portal in the Microsoft Edge window, in the Hub menu, click **All services** and then click **Cloud services (classic)**.
 
@@ -356,7 +356,7 @@
 
 15. In the Remote Desktop Connection window, click **OK**.
 
-> **Result**: At the end of this exercise you have performed a staging deployment of a PaaS cloud service, enable RDP access to a PaaS cloud service, and connected to cloud service instances via HTTP and via RDP.
+> **Result**: At the end of this exercise you have performed a staging deployment of an Azure Cloud Service, enable RDP access to an Azure Cloud Service, and connected to cloud service instances via HTTP and via RDP.
 
 
 
@@ -462,7 +462,7 @@
 
 12. Close all open windows.
 
-> **Result**: At the end of this exercise, you will have configured monitoring for a PaaS cloud service with a new metric and an alert.
+> **Result**: At the end of this exercise, you will have configured monitoring for an Azure Cloud Service with a new metric and an alert.
 
 
 
