Update to exercice 1
Many small changes in the procedure...
(users and groups are now distinct blade, group creation interface changed)

--- a/Instructions/20533D_LAB_AK_09.md
+++ b/Instructions/20533D_LAB_AK_09.md
@@ -9,7 +9,7 @@
 
 2. Start Mirosoft Edge, browse to the Azure portal at [**https://portal.azure.com**](https://portal.azure.com), and then sign in using the Microsoft account that is the Service Administrator of your subscription.
 
-3. In the Azure portal, in the hub menu, click **+ Create resource**, click **Security + Identity** and then, click **Azure Active Directory**.
+3. In the Azure portal, in the hub menu, click **+ Create a resource**, click **Security + Identity** and then, click **Azure Active Directory**.
 
 4. On the **Create directory** blade, specify the following and click **Create**:
 
@@ -26,7 +26,7 @@
   
 1. Refresh the Mirosoft Edge window displaying the Azure portal. Next, click your name in the upper right corner of the Azure portal and, in the drop-down menu, click the name of the Azure Active Directory tenant you created in the previous task.
 
-2. In the hub menu of the Azure portal, click **All services** and, in the service menu, click **Azure Active Directory**. This will display the **adatum** Azure Active Directory tenant blade.
+2. In the hub menu of the Azure portal, click **Azure Active Directory**. This will display the **adatum** Azure Active Directory tenant blade.
 
 3. Click **Quick Start**.
 
@@ -43,76 +43,74 @@
   
 1. Navigate back to the **adatum** Azure Active Directory tenant blade.
 
-2. On the adatum blade, click **Users and groups**.
+2. On the adatum blade, click **Users**.
 
-3. Click **All users**.
+3. Click **+ New user**
 
-4. Click **+ New user**
-
-5. On the **User** blade, specify the following settings (where **_domain-name_** is the name you assigned to the Azure Active Directory tenant in the first task of this exercise):
+4. On the **User** blade, specify the following settings (where **_domain-name_** is the name you assigned to the Azure Active Directory tenant in the first task of this exercise):
 
   - Name: **Remi Desforges**
   
   - User name: **rdesforges@_domain-name_.onmicrosoft.com**
 
-6. Click **Profile** and, on the **Profile** blade, specify the following settings and click **OK**:
+5. Click **Profile** and, on the **Profile** blade, specify the following settings and click **OK**:
 
   - First Name: **Remi**
 
   - Last Name: **Desforges**
 
-7. Accept the default **Properties**, **Groups** and **Directory role** settings, click the **Show Password** checkbox and note the temporary password.
+6. Accept the default **Properties**, **Groups** and **Directory role** settings, click the **Show Password** checkbox and note the temporary password.
 
-8. Click **Create**.
+7. Click **Create**.
 
-9. Click **+ New user**
+8. Click **+ New user**
 
-10. On the **User** blade, specify the following settings (where **_domain-name_** is the name you assigned to the Azure Active Directory tenant in the first task of this exercise):
+9. On the **User** blade, specify the following settings (where **_domain-name_** is the name you assigned to the Azure Active Directory tenant in the first task of this exercise):
 
   - Name: **Karen Gruber**
   
   - User name: **kgruber@_domain-name_.onmicrosoft.com**
 
-11. Click **Profile** and, on the **Profile** blade, specify the following settings and click **OK**:
+10. Click **Profile** and, on the **Profile** blade, specify the following settings and click **OK**:
 
   - First Name: **Karen**
   
   - Last Name: **Gruber**
 
-12. Accept the default **Properties** and **Groups** settings and click **Directory role**.
+11. Accept the default **Properties** and **Groups** settings and click **Directory role**.
 
-13. On the **Directory role** blade, click **Global administrator** and click **OK**.
+12. On the **Directory role** blade, click **Global administrator** and click **OK**.
 
-14. Click the **Show Password** checkbox and note the temporary password.
+13. Click the **Show Password** checkbox and note the temporary password.
 
-15. Click **Create**.
+14. Click **Create**.
 
-16. Start an InPrivate Mirosoft Edge session and browse to the Azure portal at [**https://portal.azure.com**](https://portal.azure.com).
+15. Start an InPrivate Mirosoft Edge session and browse to the Azure portal at [**https://portal.azure.com**](https://portal.azure.com).
 
-17. When prompted to sign in, specify the full user name (including the @_domain-name_.onmicrosoft.com suffix) of Remi Desforges' account and the corresponding temporary password. 
+16. When prompted to sign in, specify the full user name (including the @_domain-name_.onmicrosoft.com suffix) of Remi Desforges' account and the corresponding temporary password. 
 
-18. On the **Update your password** page, in the **Current password** box, type again the temporary password. In the **New password** and **Confirm password** text boxes, type a new password, and click **Update password and sign in**. Take a note of the new password.
-
-   > **Note:** If you receive the message **We've seen that password too many times before.  Choose something harder to guess**, you'll need to modify the password until it is unique enough to be accepted.
-   
-19. If prompted to start Microsoft Azure tour, click **Maybe later**. Next, click the user name in the upper-right corner and, in the drop-down menu, click **Sign out**
-
-20. Close the InPrivate Mirosoft Edge session.
-
-21. Start an InPrivate Mirosoft Edge window and browse to the Azure portal at [**https://portal.azure.com**](https://portal.azure.com).
-
-22. When prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of Karen Gruber's account and the corresponding temporary password.
-
-23. On the **Update your password** page, in the **Current password** box, type the temporary password. In the **New password** and **Confirm password** boxes, type a new password, and click **Update password and sign in**. Take a note of the new password.
+17. On the **Update your password** page, in the **Current password** box, type again the temporary password. In the **New password** and **Confirm password** text boxes, type a new password, and click **Update password and sign in**. Take a note of the new password.
 
    > **Note:** If you receive the message **We've seen that password too many times before.  Choose something harder to guess**, you'll need to modify the password until it is unique enough to be accepted.
    
-24. Note the message stating **No subscription found**. Click **SIGN OUT** and close the in-private session of Mirosoft Edge.
+18. If prompted to start Microsoft Azure tour, click **Maybe later**. Next, click the user name in the upper-right corner and, in the drop-down menu, click **Sign out**
+
+19. Close the InPrivate Mirosoft Edge session.
+
+20. Start an InPrivate Mirosoft Edge window and browse to the Azure portal at [**https://portal.azure.com**](https://portal.azure.com).
+
+21. When prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of Karen Gruber's account and the corresponding temporary password.
+
+22. On the **Update your password** page, in the **Current password** box, type the temporary password. In the **New password** and **Confirm password** boxes, type a new password, and click **Update password and sign in**. Take a note of the new password.
+
+   > **Note:** If you receive the message **We've seen that password too many times before.  Choose something harder to guess**, you'll need to modify the password until it is unique enough to be accepted.
+   
+23. Note the message stating **No subscription found**. Click **SIGN OUT** and close the in-private session of Mirosoft Edge.
 
 
 #### Task 4: Manage groups by using the Azure portal
 
-1. Switch to the Microsoft Edge window displaying the Azure portal and ensure that you are viewing the **Users and groups - All users** page of the **adatum** Azure Active Directory tenant blade.
+1. Switch to the Microsoft Edge window displaying the Azure portal and ensure that you are viewing the **Users - All users** page of the **adatum** Azure Active Directory tenant blade.
 
 2. Click your user account that is the Service Administrator of your subscription.
 
@@ -136,9 +134,9 @@
 
 12. Verify that the assignment completed successfully. 
 
-13. Navigate back to the **adatum** blade and click **Users and groups**.
+13. Navigate back to the **adatum** blade and click **groups**.
 
-14. Click **Group settings**.
+14. Click **General** (Note: if the options are grayed out, refresh Edge browser).
 
 15. On the **General** blade, specify the following settings and click **Save**:
 
@@ -146,19 +144,19 @@
   
   - Users can create security groups: **Yes**
 
-16. Back on the **Users and Groups** blade, click **All groups**.
+16. Click **All groups**.
 
 17. Click **+ New group**.
 
 18. On the **Group** blade, specify the following settings:
 
-  - Name: **Sales**
+  - Group Type: **Security**
+  
+  - Group name: **Sales**
 
-  - Description: **Sales employees**
+  - Group description: **Sales employees**
   
   - Membership type: **Assigned**
-
-  - Enable Office features?: **No**
 
 19. Click **Members**.
 
@@ -166,17 +164,17 @@
 
 21. Click **Create** and close the **Group** blade.
 
-22. Back on the **Users and groups - All groups** blade, click **+ New group**.
+22. Back on the **Groups - All groups** blade, click **+ New group**.
 
 23. On the **Group** blade, specify the following settings:
 
-  - Name: **Marketing**
+  - Group Type: **Security**
+  
+  - Group name: **Marketing**
 
-  - Description: **Marketing employees**
+  - Group description: **Marketing employees**
   
   - Membership type: **Assigned**
-
-  - Enable Office features?: **No**
 
 24. Click **Members**.
 
@@ -184,17 +182,17 @@
 
 26. Click **Create** and close the **Group** blade.
 
-27. Back on the **Users and groups - All groups** blade and click **+ New group**.
+27. Back on the **Groups - All groups** blade and click **+ New group**.
 
 28. On the **Group** blade, specify the following settings:
 
-  - Name: **Sales and Marketing**
+  - Group type: **Security**
+  
+  - Group name: **Sales and Marketing**
 
-  - Description: **Sales and Marketing employees**
+  - Group description: **Sales and Marketing employees**
   
   - Membership type: **Assigned**
-
-  - Enable Office features?: **No**
 
 29. Click **Members**.
 
@@ -289,9 +287,11 @@
 
 24. Switch to the **adatum** blade of the Azure portal in Mirosoft Edge.
 
-25. Click **All users**, and verify that **Mario Ledford** appears in the list of users.
+25. Click **Users**, **All users**, and verify that **Mario Ledford** appears in the list of users.
 
-26. Click **All groups**, and verify that **Azure team** appears in the list of groups.
+24. Switch back to the **adatum** blade of the Azure portal in Mirosoft Edge.
+
+26. Click **Groups**, **All groups**, and verify that **Azure team** appears in the list of groups.
 
 
 > **Result**: After completing this exercise, you should have created Azure AD users and groups by using the Azure portal and Microsoft Azure Active Directory Module for Windows PowerShell. You also should have enabled the delegated group management Azure AD Premium functionality.
