Reminder to run Add-20533DEnvironment function

--- a/Instructions/20533D_LAB_AK_04.md
+++ b/Instructions/20533D_LAB_AK_04.md
@@ -5,9 +5,9 @@
 
 #### Task 1: Review the existing deployment
   
-1. Ensure that you are signed in to MIA-CL1 as **Student** with the password **Pa55w.rd**. 
+1. Ensure that you are signed in to MIA-CL1 as **Student** with the password **Pa55w.rd**. Ensure that the Add-20533DEnvironment script successfully completed.
 
-2. Start Microsoft Edge, browse to [**https://portal.azure.com**](https://portal.azure.com), and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
+2. Start Microsoft Edge, browse to [**https://portal.azure.com**](https://portal.azure.com), and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription. 
 
 3. In the Azure portal, in the hub menu, click **Resource groups**.
 
