Reminder to run a script plus a comment
Reminder to run Add-20533DEnvironment script at the beginning.
Added a comment regarding an error outputed by a script

--- a/Instructions/20533D_LAB_AK_05.md
+++ b/Instructions/20533D_LAB_AK_05.md
@@ -5,7 +5,7 @@
   
 #### Task 1: Create a web app
   
-1. Ensure that you are signed in to MIA-CL1 as **Student** with the password **Pa55w.rd**.
+1. Ensure that you are signed in to MIA-CL1 as **Student** with the password **Pa55w.rd**. Ensure that the Add-20533DEnvironment script successfully completed.
 
 2. Open Microsoft Edge, browse to the Azure portal at [**http://portal.azure.com**](http://portal.azure.com), and then sign in using the Microsoft account that is the Service Administrator of your Azure subscription.
 
@@ -218,13 +218,13 @@
 
 #### Task 3: Roll back a deployment
   
-1. In the Azure portal, on the _yourwebapp_ blade in the command bar at the top, click **Swap**.
+1. In the Azure portal, on the web app blade in the command bar at the top, click **Swap**.
 
 2. On the Swap blade, in the **Swap type** drop-down list, verify that **Swap** is selected.
 
-3. In the **Source** drop-down list, select **Staging**.
+3. In the **Source** drop-down list, select **production**.
 
-4. In the **Destination** drop-down list, select **production**, and then click **OK** button.
+4. In the **Destination** drop-down list, select **Staging**, and then click **OK** button.
 
 5. Wait until Swap operation completes.
 
@@ -281,6 +281,8 @@
   ```
   New-AzureRMWebApp -ResourceGroupName $rg2.ResourceGroupName -Name 'webappname2' -Location $rg2.Location -AppServicePlan $appSvcPlan2.Name
   ```
+
+> **Note:** If this cmdlet returns an error change the 'webappname2' value.
 
 10. Switch to the Azure portal in the Microsoft Edge window.
 
