Updated various sections
- The following phase was deleted (the application does not have this section anymore):
On the Microsoft Update Opt-In page of the Microsoft Azure Recovery Services Agent Setup Wizard, select Use Microsoft Update when I check for updates (recommended), and click Next.

- Updated the part with creating the drive letter Z 

- Added the following section because the platform was updated with a new setting:
Select "Already downloaded or using the latest Recovery Services Agent" before pressing Download button

- Added more details
On the E:\ on mia-cl1. blade, click the mia-cl1. link (under the Computer Name)

- Added more details: the dot is very important
On the Delete blade, in the TYPE THE SERVER NAME text box, type mia-cl1. and click Delete.

--- a/Instructions/20533D_LAB_AK_06.md
+++ b/Instructions/20533D_LAB_AK_06.md
@@ -204,7 +204,7 @@
 
 18. In the script pane, paste the content of Clipboard. 
 
-19. In the command line you copied, replace **`[drive letter]`** with **`Z:`**.
+19. In the command line you copied, replace **`[drive letter]`** with **`Z:`** (if it is not already replaced).
 
 > **Note**: If your key (password) has a **/** in it, the copy to clipboard will escape this character and replace it with **\\/**.  This will cause the command to fail. Correct the escaped characters or copy the key directly from Azure.
 
@@ -276,31 +276,29 @@
 
 5. On the **Proxy Configuration** page of the **Microsoft Azure Recovery Services Agent Setup Wizard**, click **Next**.
 
-6. On the **Microsoft Update Opt-In** page of the **Microsoft Azure Recovery Services Agent Setup Wizard**, select **Use Microsoft Update when I check for updates (recommended)**, and click **Next**.
+6. On the **Installation** page of the **Microsoft Azure Recovery Services Agent Setup Wizard**, click **Install**.
 
-7. On the **Installation** page of the **Microsoft Azure Recovery Services Agent Setup Wizard**, click **Install**.
+7. Click **Proceed to Registration**. This will start **Register Server Wizard**.
 
-8. Click **Proceed to Registration**. This will start **Register Server Wizard**.
+8. Switch to Microsoft Edge displaying the Azure portal and, on the **Prepare infrastructure** blade, click **Download** after you selected "Already downloaded or using the latest Recovery Services Agent".
 
-9. Switch to Microsoft Edge displaying the Azure portal and, on the **Prepare infrastructure** blade, click **Download**.
+9. When prompted, click **Save**. This will save the vault credentials file to your Downloads folder.
 
-10. When prompted, click **Save**. This will save the vault credentials file to your Downloads folder.
+10. Switch back to the **Register Server Wizard** and, on the **Vault Identification** page, click **Browse**.
 
-11. Switch back to the **Register Server Wizard** and, on the **Vault Identification** page, click **Browse**.
+11. In the **Select Vault Credentials** dialog box, browse to the **Downloads** folder, click the **.VaultCredentials** file you downloaded, and click **Open**.
 
-12. In the **Select Vault Credentials** dialog box, browse to the **Downloads** folder, click the **.VaultCredentials** file you downloaded, and click **Open**.
+12. Click **Next**.
 
-13. Click **Next**.
+13. On the **Encryption Setting** page of the **Register Server Wizard**, click **Generate Passphrase**.
 
-14. On the **Encryption Setting** page of the **Register Server Wizard**, click **Generate Passphrase**.
+14. On the **Encryption Setting** page of the **Register Server Wizard**, next to the **Enter a location to save the passphrase**, click **Browse**.
 
-15. On the **Encryption Setting** page of the **Register Server Wizard**, next to the **Enter a location to save the passphrase**, click **Browse**.
+15. In the **Browse For Folder** dialog box, navigate to E:\\Labfiles\\Lab06\\Starter\\ and click **OK**.
 
-16. In the **Browse For Folder** dialog box, navigate to E:\\Labfiles\\Lab06\\Starter\\ and click **OK**.
+16. Click **Finish** and wait for the registration to complete.
 
-17. Click **Finish** and wait for the registration to complete.
-
-18. On the **Server Registration** page of the **Register Server Wizard**, ensure that the **Launch Microsoft Azure Recovery Services Agent** checkbox is selected and click **Close**. This will automatically open the **Microsoft Azure Backup** console.
+17. On the **Server Registration** page of the **Register Server Wizard**, ensure that the **Launch Microsoft Azure Recovery Services Agent** checkbox is selected and click **Close**. This will automatically open the **Microsoft Azure Backup** console.
 
 
 #### Task 4: Create a backup schedule
@@ -347,11 +345,13 @@
   
 1. On the **Backup Items (Azure Backup Agent)** blade, click the entry referencing the **E:\\** drive of **mia-cl1.**.
 
-2. On the **E:\\ on mia-cl1.** blade, click the **mia-cl1.** link.
+2. On the **E:\\ on mia-cl1.** blade, click the **mia-cl1.** link (under the Computer Name section).
 
 3. On the **mia-cl1.** blade, click **Delete**. 
 
 4. On the **Delete** blade, in the **TYPE THE SERVER NAME** text box, type **mia-cl1.** and click **Delete**.
+
+> **Note**: Don't forget to add the dot at the end of the server name.
 
 5. Navigate back to the recovery services vault blade and click **Overview**. 
 
