updated various steps
- note about correct formatting of yml file

- more details about the IP address checked by the user

--- a/Instructions/20533D_LAB_AK_07.md
+++ b/Instructions/20533D_LAB_AK_07.md
@@ -213,6 +213,8 @@ docker -D -H tcp://IP-address:2376 --tlsverify --tlscacert=C:\Users\Student\.doc
          MYSQL_ROOT_PASSWORD: Pa55w.rd
 ```
 
+> **Note**: Be careful when copying this part. Copy even the blank space on the right of the text (it should be 2 spaces).
+
 #### Task 2: Deploy the containers with docker-compose to an Azure VM
 
 1. In the Remote Desktop session to 20533D0701-vm0, in the **Administrator: Command Prompt** window, type the following, and then press Enter: 
@@ -257,7 +259,7 @@ docker -D -H tcp://IP-address:2376 --tlsverify --tlscacert=C:\Users\Student\.doc
 
   - Name: **Port8080-TcpAllowAny**
 
-7. Wait for the operation to complete. Next, start Internet Explorer and browse to the port 8080 on the IP address you obtained in the previous step. Verify that Internet Explorer displays the **Wordpress Installation** page
+7. Wait for the operation to complete. Next, start Internet Explorer and browse to the port 8080 on the IP address you obtained in the Exercise 2, task 2 (the same IP address as nginx server). Verify that Internet Explorer displays the **Wordpress Installation** page
 
 > **Result**: After you complete this exercise, you should have successfully implemented a multi-container application by using Docker Compose.
 
