updated various changes
- Added a note about region and VM size 

- Note to rerun a command until the correct output is displayed.

--- a/Instructions/20533D_LAB_AK_07.md
+++ b/Instructions/20533D_LAB_AK_07.md
@@ -7,6 +7,8 @@
 
 1. Ensure that you are signed in to MIA-CL1 as **Student** with the password **Pa55w.rd**, and that the **Add-20533DEnvironment** script successfully completed. The script creates an Azure VM of the size that supports nested virtualization. You will use it to install Docker Toolbox for Windows.
 
+> **Note**: For the region selection you can choose "southeastasia" and for the VM sizee "Standard_D2s_v3". This area and this size supports nested virtualization.
+
 2. Start Microsoft Edge and browse to [**https://portal.azure.com**](https://portal.azure.com). When prompted, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription. 
 
 3. In the Azure portal, in the hub menu, click **All services** and, in the service menu, click **Virtual machines**.
@@ -432,7 +434,7 @@ docker -D -H tcp://IP-address:2376 --tlsverify --tlscacert=C:\Users\Student\.doc
   kubectl get nodes
   ```
 
-3. Review the output and verify that the agent nodes are reporting the **Ready** status. 
+3. Review the output and verify that the agent nodes are reporting the **Ready** status. Rerun the command until the correct status is shown.
 
   
 > **Result**: After you complete this exercise, you should have successfully deployed a new ACS cluster with the orchestrator of your choice. 
