Updated various steps
- Updated the last step of Exercise 1, Task 3 - "No subscription found" message does not appear.
   
- Added a note regarding Access Panel Extension (currently it cannot be installed inside MIA-CL1, I proposed a workaround on the host)
   
- Update Users and groups into just Users (the platform was updated)
   
- Added a note about the translation of some buttons in the language of the country selected by the service administrator.

--- a/Instructions/20533D_LAB_AK_09.md
+++ b/Instructions/20533D_LAB_AK_09.md
@@ -105,7 +105,7 @@
 
    > **Note:** If you receive the message **We've seen that password too many times before.  Choose something harder to guess**, you'll need to modify the password until it is unique enough to be accepted.
    
-23. Note the message stating **No subscription found**. Click **SIGN OUT** and close the in-private session of Mirosoft Edge.
+23. Click **SIGN OUT** and close the in-private session of Mirosoft Edge.
 
 
 #### Task 4: Manage groups by using the Azure portal
@@ -357,6 +357,8 @@
 
 
 #### Task 2: Configure SSO on a client computer
+
+   > **Note:** The following steps should be made on the host on a compatible browser. Currently Access Panel Extension cannot be installed on MIA-CL1. 
   
 1. From Microsoft Edge, browse to [**https://myapps.microsoft.com**](https://myapps.microsoft.com).
 
@@ -404,7 +406,7 @@
 
 2. In the hub menu, click **All services** and then, in the service menu, click **Azure Active Directory**.
 
-3. On the **adatum** blade, click **Users and groups**.
+3. On the **adatum** blade, click **Users**.
 
 4. Click **All users**.
 
@@ -423,6 +425,8 @@
 11. Under **multi-factor authentication**, click **Manage service settings**.
 
 12. If prompted, sign in with the credentials for the Microsoft account that is the Service Administrator of your Azure subscription.
+
+   > **Note:** The following steps will have some buttons translated into the language of the country chosen in a previous step.
 
 13. On the **multi-factor authentication** page, ensure that the **users** tab is displayed. In the **users** list, select the check box next to **Karen Gruber** and, in the **quick steps** section, click **Enable**. 
 
