Changed More Services to All Services

--- a/Instructions/20533D_LAB_AK_01.md
+++ b/Instructions/20533D_LAB_AK_01.md
@@ -23,7 +23,7 @@
 
 9. Click **Done customizing**.
 
-10. On the **Dashboard** page, in the hub menu, click **More services**, and then, in the service menu, click the star beside **Virtual machine scale sets**. Close the service menu and verify that the **Virtual machine scale sets** entry appears at the bottom of the hub menu. Leave the Microsoft Edge window open.
+10. On the **Dashboard** page, in the hub menu, click **All services**, and then, in the service menu, click the star beside **Virtual machine scale sets**. Close the service menu and verify that the **Virtual machine scale sets** entry appears at the bottom of the hub menu. Leave the Microsoft Edge window open.
 
 #### Task 2: Use the Azure account portal
   
