Changed PaaS to Azure

--- a/Instructions/20533D_LAB_08.md
+++ b/Instructions/20533D_LAB_08.md
@@ -1,5 +1,5 @@
 ﻿# Module 8: Implementing Azure Cloud Services
-# Lab: Implementing PaaS cloud services
+# Lab: Implementing Azure Cloud Services
   
 ### Scenario
   
