--- a/Instructions/20533D_LAB_AK_01.md
+++ b/Instructions/20533D_LAB_AK_01.md
@@ -215,7 +215,7 @@
   az login
   ```
 
-3. You will be presented with the message instructing you to open a browser at the page https://aka.ms/devicelogin and provide the code included in the message to authenicate. Start Microsoft Edge and browse to https://aka.ms/devicelogin. 
+3. You will be presented with the message instructing you to open a browser at the page https://aka.ms/devicelogin and provide the code included in the message to authenticate. Start Microsoft Edge and browse to https://aka.ms/devicelogin. 
 
 4. On the **Device Login** page, type the code included in the message. This will identify Microsoft Azure Cross-platform Command Line Interface as the application publisher. Click **Continue**. 
 
