--- a/Instructions/20533D_LAB_AK_07.md
+++ b/Instructions/20533D_LAB_AK_07.md
@@ -215,7 +215,7 @@ docker -D -H tcp://IP-address:2376 --tlsverify --tlscacert=C:\Users\Student\.doc
          MYSQL_ROOT_PASSWORD: Pa55w.rd
 ```
 
-> **Note**: Be careful when copying this part. Copy even the blank space on the right of the text (it should be 2 spaces).
+> **Note**: Be careful when copying this part. Copy even the blank space to the left of the text (it should be 2 spaces).
 
 #### Task 2: Deploy the containers with docker-compose to an Azure VM
 
